added styling to login

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to Firebase Hosting</title>
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/5.8.4/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
